--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <h3>Wanna Hire Me!</h3>
             <p>Eager to contribute, I'll provide my innovative solutions along with association growth to provide efficient results.</p>
             <p style="text-align: center;">
-                <a href="https://drive.google.com/file/d/14WK4et5tZ_h0RlsXLbilFyN18ZekN96H/view?usp=sharing" target="_blank">Download My CV</a>
+                <a href="https://drive.google.com/file/d/1q2w04Oya841eP7CWDdNXFzjCx0t-Tmau/view" target="_blank">Download My CV</a>
             </p>
         </div>
     </div>
